#17 Remove reflective calls from plugin module and refactor